# wazuh-mcp-latest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_REVIEW_RESPONSE.md  claude_desktop_config.example.json  compose.yaml  docker-compose.ollama.yaml  env.example  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
dashboard/: index.html
demo/: docker-compose.yml  seed_alerts.py
demo/agent/: Dockerfile  entrypoint.sh
docs/: LLM_TESTING_GUIDE.md  PRD.md  README.md  TOOL_FLOW.md  TOOL_TABLE.md  TRD.md  open-webui-integration.md  production-readiness.md  testing-guide.md
scripts/: check_deps.sh  create_api_user.sh  generate_sbom.sh  generate_tool_table.py
tests/: conftest.py  test_autonomous_soc_tools.py  test_baselining.py  test_circuit_breaker.py  test_client_comm.py  test_config.py  test_core_coverage.py  test_coverage_boost.py  test_coverage_smoke.py  test_credential_mgmt.py  test_cve_watchlist.py  test_enrichment_and_ws.py  test_explain_alert_mitre.py  test_flaw_fixes.py  test_geo_intel.py  test_infra_coverage.py  test_integration_workflows.py  test_longer_term_bets.py  test_main_cli.py  test_new_tools.py  test_notifications.py  test_performance.py  test_phase2.py  test_phase3.py  test_phase4.py  test_prompts_mssp.py  test_rbac_coverage.py  test_retry_resilience.py  test_roi_autonomous.py  test_rule_wizard.py  test_secrets_backend.py  test_security.py  test_security_hardening_approval_rbac.py  test_security_hardening_new.py  test_security_hardening_new2.py  test_security_hardening_prod.py  test_security_hardening_regressions.py  test_server_helpers.py  test_server_http.py  test_targeted_tools.py  (+8 more)
tests/integration/: README.md  conftest.py  test_live_wazuh.py
wazuh-mcp/: README.md  compose.yaml  env.example
wazuh-mcp/tests/: conftest.py  test_config.py  test_tools.py
wazuh-mcp/wazuh_mcp/: __init__.py  __main__.py  requirements.txt  server.py  wazuh_client.py
wazuh_mcp/: .server.py.swo  .server.py.swp  __init__.py  __main__.py  abac.py  approval.py  audit.py  background.py  body_limit.py  cache.py  circuit_breaker.py  config.py  helpers.py  identity.py  input_sanitizer.py  ip_filter.py  logging_config.py  prompts.py  rate_limit.py  rbac.py  schemas.py  secrets_backend.py  security_headers.py  server.py  server.py.bak  state_store.py  tls_config.py  tool_context.py  tool_contexts.py  tool_failure_breaker.py  utils.py  validators.py  wazuh_client.py  wazuh_indexer.py
wazuh_mcp/core/: roi_tracker.py
wazuh_mcp/enrichment/: pipeline.py
wazuh_mcp/middleware/: tool_middleware.py
wazuh_mcp/tools/: __init__.py  active_response.py  agent_health.py  agent_upgrades.py  agents.py  alerts.py  archive.py  audit_mgmt.py  autonomous_soc.py  azure_devops.py  baseline.py  cdb.py  cluster.py  compliance.py  correlation.py  credential_mgmt.py  cve_watchlist.py  explain_alert.py  export.py  fim.py  fleet.py  geo_intel.py  health_check.py  incidents.py  index_mgmt.py  integrations.py  manager_audit.py  manager_config.py  metrics.py  mitre.py  network_topology.py  notifications.py  onboarding.py  pagerduty.py  playbooks.py  prompt_advisor.py  quick_wins.py  reporting.py  roi.py  rootcheck.py  (+17 more)
