[project]
name = "wazuh-mcp"
version = "1.0.0"
description = "AI-native SOC co-pilot for Wazuh — investigate alerts 5x faster, automate Tier 1 triage, generate compliance reports in seconds. Supports self-hosted, Wazuh Cloud, and MSSP multi-tenant deployments."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["wazuh", "mcp", "siem", "security", "claude", "ai", "soc", "mssp", "threat-hunting", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "structlog>=24.0.0",
]

[project.scripts]
wazuh-mcp = "wazuh_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/adi5353/wazuh-mcp"
Issues = "https://github.com/adi5353/wazuh-mcp/issues"
