[project]
name = "wazuh-mcp"
version = "1.0.0"
description = "AI-native SOC co-pilot for Wazuh — investigate alerts 5x faster, automate Tier 1 triage, generate compliance reports in seconds. Supports self-hosted, Wazuh Cloud, and MSSP multi-tenant deployments."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["wazuh", "mcp", "siem", "security", "claude", "ai", "soc", "mssp", "threat-hunting", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "structlog>=24.0.0",
]

[project.scripts]
wazuh-mcp = "wazuh_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/adi5353/wazuh-mcp-latest"
Issues = "https://github.com/adi5353/wazuh-mcp-latest/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
]

# ── pytest + coverage ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=wazuh_mcp",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",   # fail build if coverage drops below 70%
]

[tool.coverage.run]
source = ["wazuh_mcp"]
omit = [
    "wazuh_mcp/__pycache__/*",
    "wazuh_mcp/tools/__pycache__/*",
    "wazuh_mcp/core/__pycache__/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ── Bandit SAST configuration ─────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = [
    "B101",   # assert usage (acceptable in tests)
    "B311",   # random — we use it for jitter, not crypto
]
severity = "medium"
confidence = "medium"

# ── Ruff linting ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]
