[project]
name = "wazuh-mcp"
dynamic = ["version"]
description = "AI-native SOC co-pilot for Wazuh — investigate alerts 5x faster, automate Tier 1 triage, generate compliance reports in seconds. Supports self-hosted, Wazuh Cloud, and MSSP multi-tenant deployments."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["wazuh", "mcp", "siem", "security", "claude", "ai", "soc", "mssp", "threat-hunting", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = [
    # Compatible-release ranges with upper bounds so a major/breaking release
    # cannot silently enter a production install. See requirements.lock for the
    # fully pinned, reproducible set used in CI and Docker.
    "mcp>=1.0.0,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
    "idna>=3.15,<4.0.0",       # CVE-2026-45409 fixed in 3.15
    "python-dotenv>=1.0.0,<2.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "starlette>=0.40.0,<2.0.0",
    "structlog>=24.0.0,<26.0.0",
    "defusedxml>=0.7.1,<0.8.0",
]

[project.scripts]
wazuh-mcp = "wazuh_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/adi5353/wazuh-mcp-latest"
Issues = "https://github.com/adi5353/wazuh-mcp-latest/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.25.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "prometheus_client>=0.20.0,<1.0.0",
    "pyyaml>=6.0,<7.0",
]

# ── pytest + coverage ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=wazuh_mcp",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",   # fail build if coverage drops below 70%
]

[tool.coverage.run]
source = ["wazuh_mcp"]
omit = [
    "wazuh_mcp/__pycache__/*",
    "wazuh_mcp/tools/__pycache__/*",
    "wazuh_mcp/core/__pycache__/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ── Bandit SAST configuration ─────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["wazuh_mcp*"]   # prevents setuptools discovering dashboard/ as a package

[tool.setuptools.dynamic]
version = {attr = "wazuh_mcp.__version__"}

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = [
    "B101",   # assert usage (acceptable in tests)
    "B104",   # binding to 0.0.0.0 — intentional, documented, env-configurable
    "B108",   # /tmp usage in roi_tracker — non-sensitive ephemeral state
    "B110",   # try/except/pass — intentional resilience pattern in optional paths
    "B112",   # try/except/continue — intentional in SCA poll loops
    "B311",   # random — used for jitter only, not crypto
    "B608",   # false-positive SQL injection — these are plain string messages, not queries
]
severity = "medium"
confidence = "medium"

# ── Ruff linting ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    "E501",   # line too long — enforced by formatter, not linter
    "E401",   # multiple imports on one line — pre-existing style in wizard helpers
    "E402",   # module-level import not at top — intentional lazy imports
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
    "E741",   # ambiguous variable name — pre-existing (l in list comprehensions)
    "F401",   # imported but unused — many are re-exported or conditionally used
    "F541",   # f-string without placeholders — pre-existing in wizard prompts
    "F601",   # duplicate dict key — pre-existing in tool registry
    "F811",   # redefinition of unused name — intentional override pattern
    "F821",   # undefined name — occurs in optional/conditional scopes
    "F841",   # local variable assigned but never used — pre-existing
]
